# clipboard_manager

./: App.tsx  CMakeLists.txt  ClipboardManager.pro  MINIMAL_QT_FILES.md  README.md  README_Qt.md  build.sh  build_qmake.sh  index.html  package.json  vite.config.ts
resources/: resources.qrc
src/: ClipboardHistoryWidget.cpp  ClipboardHistoryWidget.h  ClipboardItem.cpp  ClipboardItem.h  ClipboardManager.cpp  ClipboardManager.h  MainWindow.cpp  MainWindow.h  SystemTrayManager.cpp  SystemTrayManager.h  TrayPopupWidget.cpp  TrayPopupWidget.h  main.cpp
